--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "express": "^4.18.2",
     "nunjucks": "^3.2.4",
     "chokidar": "^3.5.3",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "mongodb": "^6.9.0",
+    "express-session": "^1.17.3"
   },
   "keywords": [
     "survey",
