--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chokidar": "^3.5.3",
     "uuid": "^9.0.1",
     "mongodb": "^6.9.0",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "multer": "^1.4.5-lts.1"
   },
   "keywords": [
     "survey",
